// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Modal visible with dismissible default renders backdrop press handler 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    "Hesabı sil?",
                  ],
                  "props": {},
                  "type": "View",
                },
              ],
              "props": {
                "className": "rounded-lg border-base border-border-strong bg-surface p-5",
                "style": {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "className": "w-full max-w-[88%]",
            "onPress": "[Function]",
          },
          "type": "Pressable",
        },
      ],
      "props": {
        "accessibilityRole": "button",
        "className": "flex-1 items-center justify-center px-5",
        "onPress": "[Function]",
        "style": {
          "backgroundColor": "rgba(10,9,7,0.55)",
        },
      },
      "type": "Pressable",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": true,
  },
  "type": "RNModal",
}
`;

exports[`Modal hidden state still renders the RN Modal (visible=false) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    "hidden",
                  ],
                  "props": {},
                  "type": "View",
                },
              ],
              "props": {
                "className": "rounded-lg border-base border-border-strong bg-surface p-5",
                "style": {
                  "opacity": 0,
                  "transform": [
                    {
                      "scale": 0.92,
                    },
                  ],
                },
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "className": "w-full max-w-[88%]",
            "onPress": "[Function]",
          },
          "type": "Pressable",
        },
      ],
      "props": {
        "accessibilityRole": "button",
        "className": "flex-1 items-center justify-center px-5",
        "onPress": "[Function]",
        "style": {
          "backgroundColor": "rgba(10,9,7,0.55)",
        },
      },
      "type": "Pressable",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": false,
  },
  "type": "RNModal",
}
`;

exports[`Modal dismissible=false drops backdrop press handler 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    "blocking",
                  ],
                  "props": {},
                  "type": "View",
                },
              ],
              "props": {
                "className": "rounded-lg border-base border-border-strong bg-surface p-5",
                "style": {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "className": "w-full max-w-[88%]",
            "onPress": "[Function]",
          },
          "type": "Pressable",
        },
      ],
      "props": {
        "accessibilityRole": undefined,
        "className": "flex-1 items-center justify-center px-5",
        "onPress": undefined,
        "style": {
          "backgroundColor": "rgba(10,9,7,0.55)",
        },
      },
      "type": "Pressable",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": true,
  },
  "type": "RNModal",
}
`;

exports[`Sheet renders title and grab handle by default 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "props": {
            "accessibilityRole": "button",
            "onPress": "[Function]",
            "style": {
              "backgroundColor": "rgba(10,9,7,0.55)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "type": "Pressable",
        },
        {
          "children": [
            {
              "children": [],
              "props": {
                "className": "mx-auto mb-2 h-1 w-9 rounded-full bg-surface-3",
              },
              "type": "View",
            },
            {
              "children": [
                "Format seç",
              ],
              "props": {
                "className": "mb-4 pt-3 text-center font-display text-[18px] font-extrabold text-text",
              },
              "type": "Text",
            },
            "Option list",
          ],
          "props": {
            "className": "rounded-t-xl border-t-base border-border-strong bg-surface px-5 pt-3 pb-8",
            "style": {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          },
          "type": "Animated.View",
        },
      ],
      "props": {
        "className": "flex-1 justify-end",
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": true,
  },
  "type": "RNModal",
}
`;

exports[`Sheet omits title node when title prop missing 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "props": {
            "accessibilityRole": "button",
            "onPress": "[Function]",
            "style": {
              "backgroundColor": "rgba(10,9,7,0.55)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "type": "Pressable",
        },
        {
          "children": [
            {
              "children": [],
              "props": {
                "className": "mx-auto mb-2 h-1 w-9 rounded-full bg-surface-3",
              },
              "type": "View",
            },
            "untitled",
          ],
          "props": {
            "className": "rounded-t-xl border-t-base border-border-strong bg-surface px-5 pt-3 pb-8",
            "style": {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          },
          "type": "Animated.View",
        },
      ],
      "props": {
        "className": "flex-1 justify-end",
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": true,
  },
  "type": "RNModal",
}
`;

exports[`Sheet grabHandle={false} drops the handle pill 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "props": {
            "accessibilityRole": "button",
            "onPress": "[Function]",
            "style": {
              "backgroundColor": "rgba(10,9,7,0.55)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "type": "Pressable",
        },
        {
          "children": [
            {
              "children": [
                "X",
              ],
              "props": {
                "className": "mb-4 pt-3 text-center font-display text-[18px] font-extrabold text-text",
              },
              "type": "Text",
            },
            "no handle",
          ],
          "props": {
            "className": "rounded-t-xl border-t-base border-border-strong bg-surface px-5 pt-3 pb-8",
            "style": {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          },
          "type": "Animated.View",
        },
      ],
      "props": {
        "className": "flex-1 justify-end",
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "fade",
    "onRequestClose": "[Function]",
    "statusBarTranslucent": true,
    "transparent": true,
    "visible": true,
  },
  "type": "RNModal",
}
`;
